examples/test/testpolicy658.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy658
  namespace: namespace58
spec:
  podSelector:
    matchLabels:
      key29: value23
      key43: value47
      key3: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value8
          key5: value19
      podSelector:
        matchLabels:
          key3: value19
          key45: value49
          key48: value14
